# ArcaDB

./: .env  .gitignore  Commands for docker file  Commands for docker file.txt  DockerfileCoordinator  DockerfilePytorch  DockerfileTFGPU  DockerfileWorker  DockerfileWorkerClassifier  Postwoman.ipynb  README.md  create.sh  data-LTKG6_JEehybha8FXuZGI.sql  data.json  deleteTesting.sh  distributing1.sh  distributing2.sh  docker-compose.yml  docker-compose2.yml  env.env  env.json  hello.logs  mmm  permision.sh  redis-cluster.yml  redissetup.sh  redissetupAlreadyUp.sh  runmvn0.sh  withthreads.py
.ipynb_checkpoints/: csv to orc-checkpoint.ipynb
CTests/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  ORCManagement.cpp  ORCManagement.h  cmake_install.cmake
Client/: Main.java
Coordinator/: pom.xml
Coordinator Calcite/: pom.xml
CoordinatorCalcite/: pom.xml
Data/: tables.json  tables.sql
Distributed-DBMS/: docker-compose.yml  pom.xml
DumpingGround/: DockerfileWorkerOld  Postwoman.ipynb  classifier.py  docker-compose2.yml
PythonWorkers/: Worker.py  add-images.py  classifier.py  onehot.py  requirements.txt  utils.py  worker-python.py
RunResults/: 0 0 - 60 100gb.csv  0 1- 60 100gb.csv  1 0- 180 100gb.csv  1 1- 60 50gb.csv  1 2- 60 50gb.csv  2 0- 60 50gb.csv  2 1- 120 50gb.csv  2 2- 120 50gb.csv  3 0- 120 50gb.csv  3 1- 180 50gb.csv  3 2- 180 50gb.csv  4 0- 180 50gb.csv  4 1-10-10-1.csv  4 2.csv  5 0.csv  5 1-20-20-2.csv  5 2.csv  6 0.csv  6 1-30-30-3.csv  6 2.csv  7 0.csv  7 1-40-40-4.csv  7 2.csv  8 0.csv  8 1-50-50-5.csv  (+17 more)
(+354 files in other folders)
